libs/extractor/tests/snapshots/all_tests__vanilla_extract_global_theme_placeholder.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"globaltheme-remap.css.ts\",\nr#\"import { createGlobalTheme, style } from '@devup-ui/react'\nexport const lightVars = createGlobalTheme(':root', {\n  colors: { bg: 'white', text: 'black' }\n})\nexport const darkVars = createGlobalTheme('.dark', {\n  colors: { bg: 'black', text: 'white' }\n})\nexport const box = style({ padding: 8 })\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "--colors-bg-global_theme_0-0",
                value: "white",
                level: 0,
                selector: Some(
                    Global(
                        ":root",
                        "globaltheme-remap.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--colors-bg-global_theme_1-0",
                value: "black",
                level: 0,
                selector: Some(
                    Global(
                        ".dark",
                        "globaltheme-remap.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--colors-text-global_theme_0-1",
                value: "black",
                level: 0,
                selector: Some(
                    Global(
                        ":root",
                        "globaltheme-remap.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "--colors-text-global_theme_1-1",
                value: "white",
                level: 0,
                selector: Some(
                    Global(
                        ".dark",
                        "globaltheme-remap.css.ts",
                    ),
                ),
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "32px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nexport const box = \"a\";\n;\n;\nexport const darkVars = { \"colors\": {\n\t\"bg\": \"var(--colors-bg-global_theme_1-0)\",\n\t\"text\": \"var(--colors-text-global_theme_1-1)\"\n} };\nexport const lightVars = { \"colors\": {\n\t\"bg\": \"var(--colors-bg-global_theme_0-0)\",\n\t\"text\": \"var(--colors-text-global_theme_0-1)\"\n} };\n",
}
